# aviation

./: .pre-commit-config.yaml  README.md  average_flight_length.py  aviation.py  aviation_model.md  mkdocs.yml  passengers_per_day.py  pyproject.toml  required_global_fleet.py  requirements.txt  tests.py
.github/workflows/: check.yml
analysis/: average_flight_length.py  passengers_per_day.py  passengers_per_year.py  required_global_fleet.py
docs/: aviation.md  course_notes.md  index.md
docs/api/: fleet.md
docs/javascripts/: mathjax.js
src/aviation/: __init__.py  _engine.py  _model.py  demand.py  fleet.py  units.py
tests/: test_demand.py  test_engine.py  test_fleet.py
