[project]
name = "aviation"
version = "0.1.0"
description = "Sample aviation project to learn about uv, git, and aia code database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]
docs = [
    "mkdocs>=1.6.1",
    "pymdown-extensions>=10.16",
]

[tool.uv]
default-groups = ["dev","docs"]

[build-system]
requires = ["uv_build>=0.7.21,<0.8.0"]
build-backend = "uv_build"
