[project]
name = "aviation"
version = "0.1.0"
description = "Sample aviation project to learn about uv, git, and aia code database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camia-engine>=0.4.4",
    "camia-model>=0.6.4",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-camia>=0.3.3",
    "ruff>=0.12.3",
]
docs = [
    "mkdocs-bibtex>=4.4.0",
    "mkdocs-material>=9.6.15",
    "mkdocs-prebuild>=0.5.0",
    "mkdocstrings[python]>=0.29.1",
]

[tool.mypy]
mypy_path = "src"
strict = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN1","COM812","COM819","D206","D300","E111","E114","E117","E501","ISC001","ISC002",
    "Q000","Q001","Q002","W191"
]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false #doesnt require @pytest.fixture() can just do .fixture
mark-parentheses = false
parametrize-values-type = "tuple"

[tool.ruff.lint.per-file-ignores]
"analysis/*.py" = ["T201", "INP001"]
"tests/*.py" = ["D1", "S101", "INP001"]

[tool.uv]
default-groups = ["dev", "docs"]

[[tool.uv.index]] # Add the AIA private index to uv from uni of cambridge
name = "gitlab"
url = "https://gitlab.developers.cam.ac.uk/api/v4/projects/8115/packages/pypi/simple"


[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"
